# EnterpriseGPT

./: .dockerignore  .env.example  .gitignore  EnterpriseGPT_Roadmap.docx  EnterpriseGPT_Roadmap.pages  ICICI_Lombard_Motor_Renewal_SimData - Customer_Master.csv  README.md  brochure  create_mcp_server.py  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  main.py  pyproject.toml
apps/api/agents/: __init__.py  action_runner.py  anthropic_adapter.py  chat_runtime.py  composio_bridge_tool.py  dynamiq_service.py  extended_executor.py  kb_tool.py  native_providers.py  native_tool_factory.py  provider_normalizer.py  resource_resolver.py  tool_resolver.py
apps/api/agents/healing/: __init__.py  prompts.py  sanitizer.py
apps/api/agents/langgraph/: __init__.py  checkpointer.py  clarification_graph.py  dialog_graph.py  hitl_graph.py  service.py  (+2 more)
apps/api/core/: __init__.py  config.py  crypto.py  database.py  deps.py  logging.py  permissions.py  redis.py  security.py  snapshot.py  storage.py  tracing.py
apps/api/egpt_mcp/: __init__.py  _composio_compat.py  mcp_tool_registry.py  oauth_service.py  provider_apps.py  tool_registry.py  tool_run_buffer.py
apps/api/middleware/: __init__.py  audit.py  rate_limit.py  request_id.py  security.py
apps/api/migrations/: env.py
apps/api/models/: __init__.py  _base.py  api_key.py  audit_log.py  chat_attachment.py  chat_session.py  document.py  document_chunk.py  help_request.py  human_handoff.py  integration.py  mcp_server.py  native_connection.py  rag_query_log.py  session.py  tool_execution_log.py  user.py  workflow.py  workflow_data.py  workflow_execution.py  workflow_execution_step.py  workflow_version.py  workspace.py  workspace_member.py
apps/api/rag/: __init__.py  chunker.py  embeddings.py  extractors.py  pipeline.py  retrieval_service.py  vector_store.py
apps/api/routers/: __init__.py  analytics.py  auth.py  chat.py  connections.py  dialog.py  documents.py  integrations.py  mcp_servers.py  reports.py  voice.py  workflows.py
apps/api/schemas/: analytics.py  auth.py  chat.py  documents.py  healing.py  integrations.py  mcp_servers.py  native_connections.py  workflow.py
apps/api/scripts/: regenerate_workflow.py
apps/api/services/: __init__.py  analytics_service.py  auth_service.py  chat_pii.py  chat_rate_limiter.py  clarification_exceptions.py  clarification_service.py  demo_executor.py  healing_service.py  llm_pricing.py  mcp_server_service.py  memory_store.py  mfa_service.py  mock_responses.py  native_connection_service.py  oauth2_service.py  output_parser_service.py  pdf_service.py  pii_service.py  recruitment_templates.py  workflow_interpreter.py  workflow_requirements.py  workflow_service.py  workflow_templates.py
apps/api/tasks/: __init__.py  schedule_dispatcher.py  self_healing.py  worker.py  workflow_runner.py
apps/api/tests/: __init__.py  _bootstrap_db.py  conftest.py  test_auth.py  test_chat_runtime.py  test_chat_runtime_stream.py  test_clarification.py  test_connection_binding.py  test_demo_branching.py  test_demo_executor.py  test_extended_executor.py  test_health.py  test_kb_tool.py  test_middleware.py  test_mock_records.py  test_models.py  test_native_providers_new.py  test_output_parser.py  test_pdf_service.py  test_permissions.py  test_phase2c_hardening.py  test_phase2d_hardening.py  test_phase3_langgraph.py  test_phase4_mcp.py  test_phase5_rag.py  test_pii.py  test_provider_normalizer.py  test_publish_gate.py  test_rag_modules.py  test_rate_limiter_config.py  test_recruitment_templates.py  test_schedule_dispatcher.py  test_security.py  test_storage_service.py  test_tools_agent_schema.py  test_trigger_signing.py  test_voice_callback.py  test_volumetric.py  test_workflow_augment.py  test_workflow_error_routing.py  (+4 more)
(+128 files in other folders)
