[tool.poetry]
name = "enterprisegpt-api"
version = "0.1.0"
description = "EnterpriseGPT FastAPI backend — turns natural-language commands into agentic Dynamiq workflows."
authors = ["EnterpriseGPT Team"]
license = "Proprietary"
readme = "README.md"
packages = [
    { include = "agents" },
    { include = "core" },
    { include = "models" },
    { include = "egpt_mcp" },
    { include = "rag" },
    { include = "routers" },
    { include = "services" },
    { include = "schemas" },
    { include = "middleware" },
    { include = "main.py", format = "wheel" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
alembic = "^1.13"
asyncpg = "^0.29"
# Sync Postgres driver for Alembic (env.py rewrites +asyncpg → +psycopg2 at migration time).
psycopg2-binary = "^2.9"
redis = { extras = ["hiredis"], version = ">=5.2.1,<8.0.0" }
pydantic = "^2.7"
pydantic-settings = "^2.0"
python-jose = { extras = ["cryptography"], version = "^3.3" }
bcrypt = "^4.2"
httpx = "^0.28.0"
structlog = "^24.1"
sentry-sdk = { extras = ["fastapi"], version = "^2.0" }
langfuse = "^3.0"
python-multipart = "^0.0.17"
# ---------- Phase 1: auth, RBAC, MFA, PII ----------
cryptography = "^43.0"
email-validator = "^2.2"
pyotp = "^2.9"
qrcode = { extras = ["pil"], version = "^7.4" }
# ---------- Phase 2: Dynamiq + NL workflow ----------
dynamiq = { path = "../../dynamiq", develop = true }
# ---------- Phase 3: LangGraph state machines ----------
langgraph = "^1.1.0"
langchain-openai = "^1.2.0"
langgraph-checkpoint-redis = "^0.4.0"
# ---------- Phase 4: Composio MCP tool layer ----------
# Composio v0.13+ replaced ``ComposioToolSet`` / ``App`` with a new ``Composio`` SDK.
# Until the integration layer is migrated, the code uses local shims in ``egpt_mcp``;
# the underlying client is still available via ``from composio import Composio``.
composio = "^0.13"
# ---------- Phase 5: RAG & document intelligence ----------
# Align with ``dynamiq`` path dependency (``~1.11.3``) so the lockfile resolves.
qdrant-client = "~1.11.3"
pymupdf = "^1.24"
python-docx = "^1.1"
pandas = "^2.2"
langchain-text-splitters = "^0.3"
# Align with dynamiq path dependency (~1.34.34) so the lockfile resolves.
boto3 = "~1.34.34"
tabulate = "^0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.26.0"
pytest-cov = "^5.0"
ruff = "^0.6"
mypy = "^1.10"
httpx = "^0.28.0"
freezegun = "^1.5"
moto = { extras = ["s3"], version = "^5.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle, pyflakes
  "I",             # isort
  "B",             # flake8-bugbear
  "UP",            # pyupgrade
  "ASYNC",         # async best practices
  "SIM",           # simplify
]
ignore = [
  "E501",          # line length handled by formatter
  "B008",          # FastAPI Depends() in defaults is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["migrations/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"
